# amarok

./: .gitignore  CMakeLists.txt
cmake/modules/: FindLibTomahawk.cmake  FindQuaZip.cmake
src/core-impl/collections/: CMakeLists.txt
src/core-impl/collections/tomahawkcollection/: AccountListDelegate.cpp  AccountListDelegate.h  AccountListFactoryWrapper.cpp  AccountListFactoryWrapper.h  AccountListFactoryWrapperDelegate.cpp  AccountListFactoryWrapperDelegate.h  AccountListModel.cpp  AccountListModel.h  AccountListModelFilterProxy.cpp  AccountListModelFilterProxy.h  AccountListModelNode.h  CMakeLists.txt  DelegateAccountConfigWrapper.cpp  DelegateAccountConfigWrapper.h  TomahawkCollection.cpp  TomahawkCollection.h  TomahawkCollectionFactory.cpp  TomahawkCollectionFactory.h  TomahawkCollectionLocation.cpp  TomahawkCollectionLocation.h  TomahawkGuiHelpers.cpp  TomahawkMeta.cpp  TomahawkMeta.h  TomahawkMetaEditCapability.cpp  TomahawkMetaEditCapability.h  TomahawkPlaylist.cpp  TomahawkPlaylist.h  TomahawkPlaylistProvider.cpp  TomahawkPlaylistProvider.h  TomahawkServiceConfig.h  TomahawkServiceSettings.cpp  TomahawkServiceSettings.h  TomahawkServiceSettingsGui.h  amarok_collection_tomahawkcollection.desktop  amarok_collection_tomahawkcollection_config.desktop
src/core-impl/collections/tomahawkcollection/support/: AccountListFactoryWrapper.ui  TomahawkConfigWidget.ui
src/core/collections/support/: TrackForUrlWorker.h
src/images/: CMakeLists.txt
